--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-simple-captcha": "^9.3.1",
     "react-toastify": "^11.0.3",
     "sort-by": "^1.2.0",
-    "sweetalert2": "^11.15.10"
+    "sweetalert2": "^11.15.10",
+    "swiper": "^11.2.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
