--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "axios": "^1.7.9",
     "firebase": "^11.2.0",
     "localforage": "^1.10.0",
+    "lottie-react": "^2.4.0",
     "match-sorter": "^8.0.0",
+    "motion": "^12.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
+    "react-lottie": "^1.2.10",
     "react-router-dom": "^7.1.2",
     "react-simple-captcha": "^9.3.1",
     "react-toastify": "^11.0.3",
