--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^6.4.0",
     "@tanstack/react-query": "^5.64.2",
     "axios": "^1.7.9",
+    "date-fns": "^4.1.0",
     "firebase": "^11.2.0",
     "localforage": "^1.10.0",
     "lottie-react": "^2.4.0",
