--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.0",
+    "@stripe/react-stripe-js": "^3.1.1",
     "@tanstack/react-query": "^5.64.2",
     "axios": "^1.7.9",
     "date-fns": "^4.1.0",
